[package]
name = "fungible-pausable-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-contract-utils = { workspace = true }

# stellar-pausable = { workspace = true }
# stellar-pausable-macros = { workspace = true }
# stellar-ft = { workspace = true }
# contract-trait-macro = { workspace = true }
# admin-sep = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
